--- a/package.json
+++ b/package.json
@@ -3,8 +3,30 @@
   "version": "1.0.0",
   "description": "A tool library for quick, reliable, low-overhead reference",
   "main": "index.js",
+  "engines": {
+    "node": ">=16"
+  },
+  "files": [
+    "lib",
+    "dist"
+  ],
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "lint": "eslint ./lib/**/*.ts --fix"
+  },
+  "devDependencies": {
+    "@types/node": "^18.11.9",
+    "@typescript-eslint/eslint-plugin": "^5.43.0",
+    "@typescript-eslint/parser": "^5.43.0",
+    "eslint": "^8.27.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "husky": "^8.0.2",
+    "prettier": "^2.7.1",
+    "rimraf": "^3.0.2",
+    "ts-node": "^10.9.1",
+    "ts-sinon": "^2.0.2",
+    "typescript": "4.8.2"
   },
   "repository": {
     "type": "git",
